--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "course project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server/index.js"
+    "dev": "concurrently yarn:dev:*",
+    "dev:client": "parcel watch client/index.html",
+    "dev:server": "nodemon server/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +17,27 @@
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
     "node-fetch": "^2.6.0"
-  }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/runtime-corejs2": "^7.11.2",
+    "@tailwindcss/custom-forms": "^0.2.1",
+    "autoprefixer": "^10.0.1",
+    "concurrently": "^5.3.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "http-server": "^0.12.3",
+    "nodemon": "^2.0.4",
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.5.0",
+    "postcss-modules": "^3.2.2",
+    "prettier": "^2.1.2",
+    "tailwindcss": "^1.8.13"
+  },
+  "browserslist": [
+    "last 3 Chrome versions"
+  ]
 }
