--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "course project",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently --kill-others yarn:dev:*",
+    "dev": "concurrently yarn:dev:*",
+    "dev2": "yarn dev:server && yarn dev:client",
     "dev:client": "parcel watch src/client/index.html",
-    "dev:server": "nodemon src/server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:server": "nodemon --exec babel-node src/server/index.js",
+    "build:server": "npx babel src/server/index.js --out-file index.es5.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +20,9 @@
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "@babel/runtime-corejs2": "^7.11.2",
