--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "http-server": "^0.12.3",
     "nodemon": "^2.0.4",
+    "open": "^7.3.0",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.5.0",
     "postcss-modules": "^3.2.2",
