--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
   "description": "course project",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently yarn:dev:*",
-    "dev2": "yarn dev:server && yarn dev:client",
-    "dev:client": "parcel watch src/client/index.html",
-    "dev:server": "nodemon --exec babel-node src/server/index.js",
-    "build:server": "npx babel src/server/index.js --out-file index.es5.js"
+    "rundev": "concurrently --kill-others yarn:dev:*",
+    "testdev": "yarn dev:server && yarn dev:client",
+    "dev:client": "parcel watch ./src/client/index.html",
+    "dev:server": "nodemon src/server/index.js",
+    "es6:server": "nodemon --exec babel-node src/server/index.js",
+    "build:server": "npx babel src/server/index.js --out-file index.es5.js",
+    "clean": "kill -9 $(lsof -t -i:4000)"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
-    "node-fetch": "^2.6.0"
+    "jquery": "^3.5.1",
+    "node-fetch": "^2.6.0",
+    "popper.js": "^1.16.1",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -26,6 +32,7 @@
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "@babel/runtime-corejs2": "^7.11.2",
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@tailwindcss/custom-forms": "^0.2.1",
     "autoprefixer": "^10.0.1",
     "concurrently": "^5.3.0",
@@ -37,7 +44,9 @@
     "open": "^7.3.0",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.5.0",
+    "postcss-import": "^12.0.1",
     "postcss-modules": "^3.2.2",
+    "postcss-nested": "^5.0.1",
     "prettier": "^2.1.2",
     "tailwindcss": "^1.8.13"
   },
