--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "course project",
   "main": "index.js",
   "scripts": {
-    "rundev": "concurrently --kill-others yarn:dev:*",
+    "rundev": "concurrently yarn:dev:*",
     "testdev": "yarn dev:server && yarn dev:client",
-    "dev:client": "parcel watch ./src/client/index.html",
-    "dev:server": "nodemon src/server/index.js",
+    "dev:client": "parcel watch src/client/index.html",
+    "dev:server": "nodemon server/index.js",
     "es6:server": "nodemon --exec babel-node src/server/index.js",
     "build:server": "npx babel src/server/index.js --out-file index.es5.js",
     "clean": "kill -9 $(lsof -t -i:4000)"
@@ -34,7 +34,7 @@
     "@babel/runtime-corejs2": "^7.11.2",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@tailwindcss/custom-forms": "^0.2.1",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^9.8.6",
     "concurrently": "^5.3.0",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.12.0",
@@ -43,10 +43,9 @@
     "nodemon": "^2.0.4",
     "open": "^7.3.0",
     "parcel-bundler": "^1.12.4",
-    "parcel-plugin-static-files-copy": "^2.5.0",
     "postcss-import": "^12.0.1",
     "postcss-modules": "^3.2.2",
-    "postcss-nested": "^5.0.1",
+    "postcss-nested": "^4.2.3",
     "prettier": "^2.1.2",
     "tailwindcss": "^1.8.13"
   },
