feat: working store with immutable.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,8 @@
     "source.fixAll.eslint": true
   },
   "prettier.printWidth": 120,
+  "emmet.includeLanguages": {
+    "javascript": "html"
+  },
   // "prettier.singleQuote": true
 }
