--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "http-server": "^0.12.3",
+    "kill-port": "^1.6.1",
     "nodemon": "^2.0.4",
     "open": "^7.3.0",
     "parcel-bundler": "^1.12.4",
