--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "course project",
   "main": "index.js",
   "scripts": {
-    "rundev": "concurrently yarn:dev:*",
     "dev": "concurrently --kill-others 'npm run dev:client' 'npm run dev:server'",
-    "testdev": "yarn dev:server && yarn dev:client",
     "dev:client": "parcel watch src/client/**.html",
     "dev:server": "nodemon server/index.js",
     "es6:server": "nodemon --exec babel-node src/server/index.js",
     "build:server": "npx babel src/server/index.js --out-file index.es5.js",
     "clean": "kill -9 $(lsof -t -i:3000)",
     "build": "parcel build src/client/index.html",
+    "build:local": "cross-env NODE_ENV=local npm run build",
     "start": "node server/index.js"
   },
   "author": "",
@@ -20,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
