fix(package.json): fixes project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsnd3_mars_dashboard",
+  "name": "udacity-mars-project",
   "version": "1.0.0",
   "description": "course project",
   "main": "index.js",
